@@ -364,6 +364,7 @@ class phoromatic_result implements pts_webui_interface
 			$table = new pts_ResultFileTable($result_file, $intent);
 			$main .= '<p style="text-align: center; overflow: auto;" class="result_object">' . pts_render::render_graph_inline_embed($table, $result_file, $extra_attributes) . '</p>';
 
+			$main .= '<div id="pts_results_area">';
 			foreach($result_file->get_result_objects((isset($_POST['show_only_changed_results']) ? 'ONLY_CHANGED_RESULTS' : -1)) as $i => $result_object)
 			{
 				$main .= '<h2><a name="r-' . $i . '"></a><a name="' . $result_object->get_comparison_hash(true, false) . '"></a>' . $result_object->test_profile->get_title() . '</h2>';
@@ -372,6 +373,7 @@ class phoromatic_result implements pts_webui_interface
 				$main .= pts_render::render_graph_inline_embed($result_object, $result_file, $extra_attributes);
 				$main .= '</p>';
 			}
+			$main .= '</div>';
 		}
 		else
 		{
