@@ -10,6 +10,7 @@ Phoronix Test Suite (Git)
 - phoromatic: Log tick sensors into sensors-pool
 - phoromatic: Show prominent sensors via the dashboard
 - phoromatic: Add graphs to systems page
+- phoromatic: Scale SVG result graphs to better page size
 
 Phoronix Test Suite 5.8 Milestone 4
 20 May 2015
